test/src/e2e_vm_tests/test_programs/should_fail/parser_associated_type_error/src/main.sw
script;

trait T{type E const C:Self::E::E}
